remove logging & fix unwanted horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,7 @@
   justify-content: center;
   height: fit-content;
   width: 100vw;
-  min-width: 100vw;
-  max-width: 100vw;
+  max-width: 100%;
 }
 
 .App-logo {
