--- a/src/components/body/Body.css
+++ b/src/components/body/Body.css
@@ -1,11 +1,13 @@
 .body-container {
     display: flex;
     justify-content: center;
-    height: 2000px;
-    width: 100%;
+    height: fit-content;
+    width: 100vw;
+    max-width: 100%;
+    min-height: 100%;
+    padding: 50px;
 }
 
 .test {
-    width: 80%;
-    max-width: 80%;
+   width: 100%;
 }
