--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -1,7 +1,6 @@
 .main-container {
     width: 100vw;
-    min-width:  100vw;
-    max-width: 100vw;
+    max-width: 100%;
     height: fit-content;
     background-color: rgb(254, 251, 255);
     display: flex;
@@ -11,9 +10,10 @@
 
 .main-holder {
     position: relative;
-    width: 100%;
-    max-width: 100vw;
+    width: 100vw;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     height: fit-content;
+    min-height: inherit;
 }
